<resources>
    <string name="app_name">TPEMOO</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_agregarcliente">Registro de Clientes</string>
    <string name="hint_nombre">Nombre</string>
    <string name="hint_apellido">Apellido 1</string>
    <string name="hint_apellido2">Apellido 2</string>
    <string name="hint_ID">Codigo O Numero ID</string>
    <string name="hint_direccion">Direccion Del Cliente</string>

    <string name="hint_telefono">Telefono</string>
    <string name="hint_correo">Correo</string>

    <string name="hint_idruta">Codigo o Nombre de la Tarifa</string>
    <string name="hint_descripcionR">Descripcion de la Tarifa</string>
    <string name="hint_monto">Precio de la Tarifa</string>
    <string name="hint_cantidad">Cantidad</string>
    <string name="hint_pagar">Total a Pagar</string>
    <string name="hint_concepto">Concepto o Motivo de Pago</string>

    <string name="accion_cancelar">Cancelar</string>
    <string name="accion_aceptar">Aceptar</string>
    <string name="title_activity_detalles">Detalles</string>
    <string name="title_activity_detail">DetailActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_registro_pago">Registrar</string>
    <string name="title_activity_tarifa">Tarifa</string>
    <string name="title_activity_tarifas">tarifas</string>
    <string name="title_activity_agregartarifa">Tarifas</string>
    <string name="title_activity_detalle_factura">Documento</string>
    <string name="title_activity_detalle_tarifa">Tarifa</string>


</resources>
