<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="mancash_outs.cash_outs.p43z.mycash_outs.agregartarifa"
    tools:showIn="@layout/activity_agregartarifa">



    <!-- Objeto con Scroll -->
    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/app_bar"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="24dp">

            <!-- Card Perfil -->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_margin">

                <LinearLayout
                    style="@style/Widget.CardContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <!--Etiqueta Perfil -->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Informacion De La Nueva Tarifa"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
                    <LinearLayout
                        android:id="@+id/area_ID"
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent"
                        android:orientation="horizontal"
                        android:weightSum="1"
                        android:layout_alignParentTop="true"
                        android:gravity="center_horizontal"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_marginTop="20dp">


                        <ImageView
                            android:id="@+id/img_rutaID"
                            android:layout_width="35dp"
                            android:layout_height="70dp"
                            android:src="@drawable/ic_ocation" />

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/til_tarifa"
                            android:layout_width="125dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            app:counterEnabled="true"
                            app:counterTextAppearance="@style/Counter"
                            app:counterOverflowTextAppearance="@style/CounterOverFlow"
                            app:counterMaxLength="15"
                            app:errorEnabled="true"
                            android:layout_weight="0.25"
                            android:layout_marginTop="5dp">

                            <EditText
                                android:id="@+id/campo_titulo_ruta_ID"
                                android:maxLength="15"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="25"
                                android:hint="@string/hint_idruta"
                                android:inputType="text"
                                android:singleLine="true"
                                android:textSize="13dp"
                                android:gravity="center_horizontal" />
                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/descripcion_ID"
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent"
                        android:orientation="horizontal"
                        android:weightSum="1"
                        android:layout_below="@+id/area_ID"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:gravity="center_horizontal"
                        android:layout_alignRight="@+id/area_ID"
                        android:layout_alignEnd="@+id/area_ID">


                        <ImageView
                            android:id="@+id/img_descripcion"
                            android:layout_width="35dp"
                            android:layout_height="70dp"
                            android:src="@drawable/ic_information" />

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/til_descscripcion"
                            android:layout_width="125dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            app:counterEnabled="true"
                            app:counterTextAppearance="@style/Counter"
                            app:counterOverflowTextAppearance="@style/CounterOverFlow"
                            app:counterMaxLength="40"
                            app:errorEnabled="true"
                            android:layout_weight="0.25"
                            android:layout_marginTop="5dp">

                            <EditText
                                android:id="@+id/campo_descripcion"
                                android:maxLength="40"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="25"
                                android:hint="@string/hint_descripcionR"
                                android:inputType="text"
                                android:singleLine="true"
                                android:textSize="13dp"
                                android:gravity="center_horizontal" />
                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/monto_ID"
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent"
                        android:orientation="horizontal"
                        android:weightSum="1"
                        android:layout_below="@+id/descripcion_ID"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:gravity="center_horizontal"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginBottom="15dp">



    <ImageView
        android:id="@+id/img_monto_ID"
        android:layout_width="35dp"
        android:layout_height="70dp"
        android:layout_marginLeft="10dp"
        android:src="@drawable/ic_price"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="₡"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="20dp" />




                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/til_monto"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            app:counterEnabled="true"
                            app:counterTextAppearance="@style/Counter"
                            app:counterOverflowTextAppearance="@style/CounterOverFlow"
                            app:counterMaxLength="7"
                            app:errorEnabled="true"
                            android:layout_weight="0.25"
                            android:layout_marginTop="5dp">

                            <EditText
                                android:id="@+id/campo_titulo_monto"
                                android:maxLength="7"
                                android:layout_width="152dp"
                                android:layout_height="wrap_content"
                                android:ems="25"
                                android:hint="@string/hint_monto"
                                android:inputType="number"
                                android:singleLine="true"
                                android:textSize="13dp"
                                android:gravity="center_horizontal" />
                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>




        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>




    <LinearLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/boton_cancelar"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/accion_cancelar" />

        <Button
            android:id="@+id/boton_aceptar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:text="@string/accion_aceptar"
            android:textColor="@android:color/white" />
    </LinearLayout>



</RelativeLayout>
